--- a/_includes/themes/bootstrap/nav-bar.html
+++ b/_includes/themes/bootstrap/nav-bar.html
@@ -2,7 +2,7 @@
               <p>
                 <span class="left">
                   <a href="#"><i class="fa fa-map-marker"></i>Fazenda Rio Grande, Paraná, Brasil</a>
-                  <a href="#"><i class="fa fa-mobile-phone"></i>41 9 9600 6274</a>
+                  <a href="#"><i class="fa fa-mobile-phone"></i>(41) 99600 6274</a>
                   <a href="#"><i class="fa fa-envelope"></i>luanadebarrosto@gmail.com</a>
               	</span>
                 <span class="right hidden-sm-down">                          
