--- a/_includes/themes/bootstrap/footer.html
+++ b/_includes/themes/bootstrap/footer.html
@@ -1,7 +1,7 @@
       <!-- Footer -->
       <footer class="default-footer text-center">
         <div class="container">
-          <img class="mb-40 footer-logo" src="{{ BASE_PATH }}/assets/images/logo-2.png" alt="">
+          <img class="mb-40 footer-logo" src="{{ BASE_PATH }}/assets/images/lbto-logo.png" alt="">
           <span class="copy-right dis-blk">Feito com <i class="fa fa-heart cyan-color"></i> por <a href="https://lbterapiaocupacional.github.io">Luana de Barros</a></span>
           <span class="social">
                   {% if site.author.facebook %}<a href="https://www.facebook.com/{{ site.author.facebook }}/"><i class="fa fa-2x fa-facebook"></i></a>{% endif %}
