--- a/_includes/themes/bootstrap/nav-bar.html
+++ b/_includes/themes/bootstrap/nav-bar.html
@@ -15,7 +15,7 @@
             </div>
 
             <!-- navbar-default -->
-            <nav class="navbar navbar-toggleable-sm navbar-light bg-default">
+           <!-- <nav class="navbar navbar-toggleable-sm navbar-light bg-default">
               <div class="container">
                 <a class="navbar-brand" href="{{ BASE_PATH }}"><img src="{{ BASE_PATH }}/assets/images/logo.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar1" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,6 +35,45 @@
                       </div>
                     </li>
                   </ul>
+                </div>
+              </div>
+            </nav> -->
+
+            <nav class="navbar navbar-toggleable-sm navbar-light bg-black">
+              <div class="container">
+                <a class="navbar-brand" href="index.html"><img src="{{ BASE_PATH }}/assets/images/logo-2.png" alt=""></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar4" aria-expanded="false" aria-label="Toggle navigation">
+	                <i class="fa fa-bars"></i>
+	              </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbar4">
+                  <ul class="navbar-nav">
+                    <li class="nav-item">
+                      <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="about.html">Sobre</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="contact.html">Contato</a>
+                    </li>
+		    <li class="nav-item">
+                      <a class="nav-link" href="contact.html">Blog</a>
+                    </li>
+                   <!-- <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Blog</a>
+                      <div class="dropdown-menu">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                      </div>
+                    </li> -->
+                  </ul>
+                  <form class="form-inline hidden-sm-down">
+                    <div class="top_search_con">
+                      <input class="form-control mr-sm-2" placeholder="Busca ..." type="text">
+                      <span class="top_search_icon"><i class="fa fa-search"></i></span>
+                    </div>
+                  </form>
                 </div>
               </div>
             </nav>
