--- a/_includes/themes/bootstrap/nav-bar.html
+++ b/_includes/themes/bootstrap/nav-bar.html
@@ -1,4 +1,4 @@
-            <div class="top-menu">
+            <div class="top-menu top-menu-inverse">
               <p>
                 <span class="left">
                   <a href="#"><i class="fa fa-map-marker"></i>Fazenda Rio Grande, Paraná, Brasil</a>
