--- a/_includes/themes/bootstrap/nav-bar.html
+++ b/_includes/themes/bootstrap/nav-bar.html
@@ -1,4 +1,4 @@
-            <div class="top-menu top-menu-inverse">
+            <div class="top-menu">
               <p>
                 <span class="left">
                   <a href="#"><i class="fa fa-map-marker"></i>Fazenda Rio Grande, Paraná, Brasil</a>
@@ -39,7 +39,7 @@
               </div>
             </nav> -->
 
-            <nav class="navbar navbar-toggleable-sm navbar-light bg-black">
+            <nav class="navbar navbar-toggleable-sm navbar-light bg-default">
               <div class="container">
                 <a class="navbar-brand" href="index.html"><img src="{{ BASE_PATH }}/assets/images/logo-2.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar4" aria-expanded="false" aria-label="Toggle navigation">
