--- a/_includes/themes/bootstrap/nav-bar.html
+++ b/_includes/themes/bootstrap/nav-bar.html
@@ -1,16 +1,12 @@
             <div class="top-menu">
               <p>
                 <span class="left">
-                  <a href="#"><i class="fa fa-map-marker"></i>Fazenda Rio Grande, Paraná, Brasil</a>
-                  <a href="#"><i class="fa fa-mobile-phone"></i>(41) 99600 6274</a>
-                  <a href="#"><i class="fa fa-envelope"></i>luanadebarrosto@gmail.com</a>
-              	</span>
-                <span class="right hidden-sm-down">                          
-                  {% if site.author.facebook %}<a href="https://www.facebook.com/{{ site.author.facebook }}/"><i class="fa fa-facebook"></i></a>{% endif %}
-                  {% if site.author.twitter %}<a href="https://twitter.com/{{ site.author.twitter }}"><i class="fa fa-twitter"></i></a>{% endif %}
-                  {% if site.author.linkedin %}<a href="https://www.linkedin.com/in/{{ site.author.linkedin }}/"><i class="fa fa-linkedin"></i></a>{% endif %}
-                  {% if site.author.instagram %}<a href="https://www.instagram.com/{{ site.author.instagram }}/"><i class="fa fa-instagram"></i></a>{% endif %}                            
-              	</span>
+                  <a href="#"><i class="fa fa-map-marker"></i>Fazenda Rio Grande, Paraná, BR</a>
+                </span>
+                <span class="right">  
+                  <a href="tel:41996006274"><i class="fa fa-phone"></i> (41) 996006274</a>
+                  <a href="mailto:luanadebarrosto@gmail.com"><i class="fa fa-envelope"></i> luanadebarros.to@gmail.com</a>
+		</span>
               </p>
             </div>
 
