--- a/_includes/themes/bootstrap/nav-bar.html
+++ b/_includes/themes/bootstrap/nav-bar.html
@@ -47,13 +47,13 @@
                       <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="about.html">Sobre</a>
+                      <a class="nav-link" href="about-sample.html">Sobre</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="contact.html">Contato</a>
                     </li>
 		    <li class="nav-item">
-                      <a class="nav-link" href="contact.html">Blog</a>
+                      <a class="nav-link" href="blog.html">Blog</a>
                     </li>
                    <!-- <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Blog</a>
