--- a/_includes/themes/bootstrap/nav-bar.html
+++ b/_includes/themes/bootstrap/nav-bar.html
@@ -4,7 +4,7 @@
                   <a href="#"><i class="fa fa-map-marker"></i>Fazenda Rio Grande, Paraná, BR</a>
                 </span>
                 <span class="right">  
-                  <a href="tel:41996006274"><i class="fa fa-phone"></i> (41) 99600 6274</a>
+                  <a href="tel:41996006274"><i class="fa fa-phone"></i> (41) 9 9600 6274</a>
                   <a href="mailto:luanadebarrosto@gmail.com"><i class="fa fa-envelope"></i> luanadebarros.to@gmail.com</a>
 		</span>
               </p>
